# experiment-modbus-tcp

./: .gitmodules  LICENSE  README.md  experiment-modbus-tcp.cabal  stack.yaml
src/: Main.hs
