name:                experiment-modbus-tcp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/drbsg/experiment-modbus-tcp#readme
license:             BSD3
license-file:        LICENSE
author:              Brett Gibson
maintainer:          315260+drbsg@users.noreply.github.com
copyright:           Copyright 2018 Brett Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable experiment-modbus-tcp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , modbus-tcp
                     , transformers >= 0.5
                     , network
                     , optparse-applicative
